welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: '(' expected but identifier found.
for b <- 1 to 6){recule()}
    ^Program:12: error: illegal start of simple expression
}
^